feat: jdk17 코드 제거